# redshift

./: README.md  pyproject.toml
redshift/: __init__.py  __main__.py  config.py  pdb.py
redshift/agent/: __init__.py  agent.py
redshift/agent/tools/: __init__.py  generate_answer.py  move_frame.py  print_args.py  print_expression.py  print_names.py  print_retval.py  read_file.py  semantic_search.py  show_source.py
redshift/shared/: is_internal_frame.py  is_project_file.py  is_user_file.py  serializers.py  truncator.py
